# learn_cmake_debug_demo

./: CMakeLists.txt  README.md  main.cpp
include/: tool.h
include/hello/: hello.h
src/: tool.cpp
src/hello/: hello.cpp
